styles/style.css
* {
  box-sizing: border-box;
}

.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  display: flex;
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  background-color: #f2f2f2;
  position: relative;
  /* выше установили ограничения для секции */
}

.header__title {
  align-self: center;
  width: 730px;
  line-height: 96px;
  font-size: 102px;
  font-weight: 600;
}

.header__title_place_header {
  margin-left: 64px;
  z-index: 1;
}

.header__subtitle {
  width: 388px;
  line-height: 25px;
  font-size: 18px;
}

.header__subtitle_place_header {
  position: absolute;
  bottom: 30px;
  left: 64px;
  z-index: 1;
}

.header__link {
  text-decoration: none;
}

.logo {
  display: block;
  width: 183px;
  height: 32px;
}

.logo_place_header {
  top: 30px;
  left: 64px;
  position: absolute;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
.header__square-pic {
  height: 568px;
  width: 568px;
  background: #2f80ed;
}

.header__square-pic_place_header {
  position: absolute;
  top: 64px;
  right: 0;
}

.header__main-illustration {
  width: 765px;
  height: 608px;
  background-image: url(../images/header-image.png);
  background-size: cover;
  background-repeat: no-repeat;
}

.header__main-illustration_place_header {
  position: absolute;
  right: 0;
  bottom: 0;
}


/* .description */

.description {
  display: flex;
  justify-content: center;
  padding: 100px 0;
}

.two-columns {
  display: flex;
  justify-content: space-between;
  width: 80%;
}

.two-columns__brief {
  margin: 0;
  width: 175px;
  line-height: 1.2;
  font-size: 18;
  font-weight: 400;
}

.two-columns__link {
  text-decoration: none;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  margin: 0;
  margin-bottom: 30px;
  line-height: 34px;
  font-size: 24px;
}

.two-columns__paragraph:last-child {
  margin-bottom: 0;
}

.two-columns__span-accent {
  font-weight: 600;
}


/* .digits */

.digits {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 0;
}

.section-title {
  margin: 0;
  width: 60%;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  text-align: center;
}

.section-subtitle {
  width: 60%;
  line-height: 34px;
  font-size: 24px;
  font-weight: 400;
  text-align: center;
}

.table {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 1100px;
}

.table__cell {
  width: 250px;
}

.table__cell_place_digits {
  margin-top: 60px;
}

.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
  margin-top: 80px;
}

.table__heading {
  margin: 0;
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
}

.table__text {
  margin: 0;
  line-height: 1.2;
  font-size: 18px;
  font-weight: 400;
}

.table__cell_place_digits {
  margin-top: 20px;
}

